# gpufetch

./: .gitignore  README.md  eightball.py  game_dino.py  game_wordle.py  lsgpu.py  pyproject.toml  spotify.py  sysinfo.py  weather.py
.github/workflows/: release.yml
entities/: anime_girl.py  greeting.py
src/gpufetch/: __init__.py  eightball.py  game_blackjack.py  game_dino.py  game_roulette.py  game_snake.py  game_wordle.py  main.py  moon.py  prices.py  spotify.py  sysinfo.py  weather.py
src/lsgpu/: __main__.py  game_wordle.py  main.py
src/lsgpu/entities/: base.py
